# CXBTool

./: README.md  meson.build  mingw-w64-x86_64.txt
src/: cxb_parser.cpp  cxb_parser.hpp  main.cpp  xml_loader.cpp  xml_loader.hpp
subprojects/: tinyxml2.wrap
